[package]
name = "earth_codec"
version = "0.0.1"
authors = ["Gabriel Cardona <https://www.earth.engineering/>"]
edition = "2018"
license = "MIT"
homepage = "https://www.earth.engineering"
repository = "https://github.com/EarthEngineering/codec"
readme = "README.md"
description = "Library for encoding and decoding EARTH addresses."
documentation = "https://docs.rs/earth_codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.7.1"
better-panic = "0.2.0"
keyphrase = "0.0.1"

[dev-dependencies]
hex = "0.3.2"
